# line_life_bot

./: .env.example  .gitignore  Dockerfile  PROJECT_STRUCTURE.md  README.md  RICHMENU_GUIDE.md  admin_app.py  app.py  docker-compose.yml  note.md  pyproject.toml  requirements.txt  weather_service.py
.github/: deploy.yml
richmenu/: __init__.py  clean_richmenus.py  create_rich_menu.py  generate_rich_menu_image.py  rich_menu_alias.py
templates/: richmenu_manager.html
