[project]
name = "line-weather-bot"
version = "0.1.0"
description = "LINE Bot for weather information"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.0",
    "line-bot-sdk>=3.9.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "gunicorn>=21.2.0",
]

[tool.uv]
dev-dependencies = []
